RESOLVED FIXED146948
Assertions.h should include ExportMacros.h
https://bugs.webkit.org/show_bug.cgi?id=146948
Summary Assertions.h should include ExportMacros.h
Anders Carlsson
Reported 2015-07-14 15:57:58 PDT
Assertions.h should include Platform.h
Attachments
Patch (3.35 KB, patch)
2015-07-14 16:00 PDT, Anders Carlsson
thorton: review+
Anders Carlsson
Comment 1 2015-07-14 16:00:50 PDT
Anders Carlsson
Comment 2 2015-07-14 16:51:54 PDT
Note You need to log in before you can comment on or make changes to this bug.